include_directories(include)
include_directories(../lib)
file(GLOB daemous_SOURCES *.c)
foreach(filename ${daemous_SOURCES})
    get_filename_component(name ${filename} NAME_WE)
    if(${name} STREQUAL  become_daemon )
        SET(daemous_equal FALSE)
    else()
        SET(daemous_equal TRUE)
    endif()
    if(${daemous_equal})

     add_executable(${name} ${filename})
      target_link_libraries(${name} tlpl_lib pthread become_daemon  )
    endif()
endforeach()