file(GLOB filebuff_SOURCES *.c)
foreach(filename ${filebuff_SOURCES})
    get_filename_component(name ${filename} NAME_WE)
    if(${name} STREQUAL copy)
    add_executable(filebuff_${name} ${filename})
    target_link_libraries(filebuff_${name} tlpl_lib pthread  )
    else()
        add_executable(filebuff_${name} ${filename})
        target_link_libraries(filebuff_${name} tlpl_lib pthread  )
    endif()
endforeach()